--- a/Arcanum.UI/Components/Windows/MainWindows/MainMenuScreen.xaml
+++ b/Arcanum.UI/Components/Windows/MainWindows/MainMenuScreen.xaml
@@ -71,13 +71,13 @@
                              FontSize = "14"
                              Command = "{Binding ArcanumVc}"
                              Style = "{StaticResource MenuButtonTheme}" />
-                <RadioButton Margin = "40,0,40,10"
-                             Content = "Features"
-                             Height = "30"
-                             Foreground = "{StaticResource DefaultForeColorBrush}"
-                             FontSize = "14"
-                             Command = "{Binding FeatureVc}"
-                             Style = "{StaticResource MenuButtonTheme}" />
+                <!-- <RadioButton Margin = "40,0,40,10" -->
+                <!--              Content = "Features" -->
+                <!--              Height = "30" -->
+                <!--              Foreground = "{StaticResource DefaultForeColorBrush}" -->
+                <!--              FontSize = "14" -->
+                <!--              Command = "{Binding FeatureVc}" -->
+                <!--              Style = "{StaticResource MenuButtonTheme}" /> -->
                 <RadioButton IsChecked = "False"
                              Margin = "40,0,40,10"
                              Content = "Modforge"
