--- a/Arcanum.UI/Components/Views/MainMenuScreen/AboutUsViewModel.xaml
+++ b/Arcanum.UI/Components/Views/MainMenuScreen/AboutUsViewModel.xaml
@@ -8,6 +8,15 @@
              Background = "Transparent"
              d:DesignHeight = "450"
              d:DesignWidth = "800">
+
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source = "../../Styles/Specific/TransparentButtonStyle.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </UserControl.Resources>
+
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height = "40" />
@@ -82,34 +91,16 @@
                 <ColumnDefinition Width = "1*" />
             </Grid.ColumnDefinitions>
 
-            <styleClasses:BaseButton x:Name = "OpenPatreonButton"
-                                     Grid.Column = "0"
-                                     Margin = "50, 25"
-                                     Padding = "10, 5"
-                                     FontSize = "16"
-                                     Click = "OpenPatreonButton_Click"
-                                     Background = "Transparent"
-                                     HoverBackground = "Transparent">
-                <styleClasses:BaseButton.Style>
-                    <Style TargetType = "styleClasses:BaseButton">
-                        <!-- BasedOn = "{StaticResource BaseDarkButtonStyle}"> -->
-                        <Setter Property = "Background"
-                                Value = "Transparent" />
-                        <Setter Property = "BorderThickness"
-                                Value = "0" />
-                        <Style.Triggers>
-                            <Trigger Property = "IsMouseOver"
-                                     Value = "True">
-                                <Setter Property = "Cursor"
-                                        Value = "Hand" />
-                            </Trigger>
-                        </Style.Triggers>
-                    </Style>
-                </styleClasses:BaseButton.Style>
+            <Button x:Name = "OpenPatreonButton"
+                    Grid.Column = "0"
+                    Margin = "50, 25"
+                    Padding = "10, 5"
+                    FontSize = "16"
+                    Click = "OpenPatreonButton_Click">
 
                 <Image Source = "/Assets/Images/PATREON_SYMBOL_1_WHITE_RGB.png" />
 
-            </styleClasses:BaseButton>
+            </Button>
             <styleClasses:BaseButton x:Name = "OpenDiscordButton"
                                      Grid.Column = "1"
                                      Margin = "50, 25"
@@ -119,12 +110,12 @@
                                      Background = "Transparent"
                                      HoverBackground = "Transparent">
                 <styleClasses:BaseButton.Style>
-                    <Style TargetType = "styleClasses:BaseButton">
-                        <!-- BasedOn = "{StaticResource BaseDarkButtonStyle}"> -->
+                    <Style TargetType = "styleClasses:BaseButton"
+                           BasedOn = "{StaticResource {x:Type styleClasses:BaseButton}}">
                         <Setter Property = "Background"
                                 Value = "Transparent" />
-                        <Setter Property = "BorderThickness"
-                                Value = "0" />
+                        <Setter Property = "HoverBackground"
+                                Value = "Transparent" />
                         <Style.Triggers>
                             <Trigger Property = "IsMouseOver"
                                      Value = "True">
@@ -145,12 +136,12 @@
                                      Background = "Transparent"
                                      HoverBackground = "Transparent">
                 <styleClasses:BaseButton.Style>
-                    <Style TargetType = "styleClasses:BaseButton">
-                        <!-- BasedOn = "{StaticResource BaseDarkButtonStyle}"> -->
+                    <Style TargetType = "styleClasses:BaseButton"
+                           BasedOn = "{StaticResource {x:Type styleClasses:BaseButton}}">
+                        <Setter Property = "HoverBackground"
+                                Value = "Transparent" />
                         <Setter Property = "Background"
                                 Value = "Transparent" />
-                        <Setter Property = "BorderThickness"
-                                Value = "0" />
                         <Style.Triggers>
                             <Trigger Property = "IsMouseOver"
                                      Value = "True">
