--- a/Arcanum.UI/Components/Windows/MainWindows/MainWindow.xaml
+++ b/Arcanum.UI/Components/Windows/MainWindows/MainWindow.xaml
@@ -3,6 +3,7 @@
                          xmlns:x = "http://schemas.microsoft.com/winfx/2006/xaml"
                          xmlns:styleClasses = "clr-namespace:Arcanum.UI.Components.StyleClasses"
                          xmlns:mainWindow = "clr-namespace:Arcanum.UI.Components.Views.MainWindow"
+                         xmlns:userControls = "clr-namespace:Arcanum.UI.Components.UserControls"
                          Title = "Arcanum"
                          Height = "1080"
                          Width = "1920"
@@ -47,118 +48,125 @@
         <CommandBinding Command = "mainWindow:MwCommands.OpenReloadFolderWindowCommand"
                         Executed = "OpenReloadFolderWindow_OnExecuted"
                         CanExecute = "CommandCanAlwaysExecute" />
+        <CommandBinding Command = "mainWindow:MwCommands.OpenConsoleCommand"
+                        Executed = "OpenConsoleCommand_OnExecuted"
+                        CanExecute = "CommandCanAlwaysExecute" />
 
     </Window.CommandBindings>
 
     <styleClasses:BaseWindow.HeaderContent>
         <Menu>
-            <MenuItem Header = "File">
-                <MenuItem Header = "Create new Project"
-                          Command = "mainWindow:MwCommands.NewProjectFileCommand">
-                    <MenuItem.Icon>
+            <userControls:SearchableMenuItem Header = "File">
+                <userControls:SearchableMenuItem Header = "Create new Project"
+                                                 Command = "mainWindow:MwCommands.NewProjectFileCommand">
+                    <userControls:SearchableMenuItem.Icon>
                         <Image Source = "../../../Assets/Icons/16x16/Plus16x16.png" />
-                    </MenuItem.Icon>
-                </MenuItem>
-                <MenuItem Header = "Open Project"
+                    </userControls:SearchableMenuItem.Icon>
+                </userControls:SearchableMenuItem>
+                <userControls:SearchableMenuItem Header = "Open Project"
                           Command = "mainWindow:MwCommands.OpenProjectFileCommand">
-                    <MenuItem.Icon>
+                    <userControls:SearchableMenuItem.Icon>
                         <Image Source = "../../../Assets/Icons/16x16/OpenFolder16x16.png" />
-                    </MenuItem.Icon>
-                </MenuItem>
-                <MenuItem Header = "Close current Project"
+                    </userControls:SearchableMenuItem.Icon>
+                </userControls:SearchableMenuItem>
+                <userControls:SearchableMenuItem Header = "Close current Project"
                           Command = "mainWindow:MwCommands.CloseProjectFileCommand">
-                    <MenuItem.Icon>
+                    <userControls:SearchableMenuItem.Icon>
                         <Image Source = "../../../Assets/Icons/16x16/Close16x16.png" />
-                    </MenuItem.Icon>
-                </MenuItem>
+                    </userControls:SearchableMenuItem.Icon>
+                </userControls:SearchableMenuItem>
                 <Separator />
-                <MenuItem Header = "Save All Modifications"
+                <userControls:SearchableMenuItem Header = "Save All Modifications"
                           Command = "mainWindow:MwCommands.SaveAllModifiedObjectsCommand">
-                    <MenuItem.Icon>
+                    <userControls:SearchableMenuItem.Icon>
                         <Image Source = "../../../Assets/Icons/16x16/Save16x16.png" />
-                    </MenuItem.Icon>
-                </MenuItem>
+                    </userControls:SearchableMenuItem.Icon>
+                </userControls:SearchableMenuItem>
 
-                <MenuItem Header = "Custom Saving Selector"
+                <userControls:SearchableMenuItem Header = "Custom Saving Selector"
                           Command = "mainWindow:MwCommands.OpenSaveSelectorCommand">
-                    <MenuItem.Icon>
+                    <userControls:SearchableMenuItem.Icon>
                         <Image Source = "../../../Assets/Icons/16x16/SaveSelector16x16.png" />
-                    </MenuItem.Icon>
-                </MenuItem>
+                    </userControls:SearchableMenuItem.Icon>
+                </userControls:SearchableMenuItem>
                 <Separator />
-                <MenuItem Header = "Reload File"
+                <userControls:SearchableMenuItem Header = "Reload File"
                           Command = "mainWindow:MwCommands.OpenReloadFileWindowCommand">
-                    <MenuItem.Icon>
+                    <userControls:SearchableMenuItem.Icon>
                         <Image Source = "../../../Assets/Icons/16x16/ReloadFile16x16.png" />
-                    </MenuItem.Icon>
-                </MenuItem>
-                <MenuItem Header = "Reload Folder"
+                    </userControls:SearchableMenuItem.Icon>
+                </userControls:SearchableMenuItem>
+                <userControls:SearchableMenuItem Header = "Reload Folder"
                           Command = "mainWindow:MwCommands.OpenReloadFolderWindowCommand">
-                    <MenuItem.Icon>
+                    <userControls:SearchableMenuItem.Icon>
                         <Image Source = "../../../Assets/Icons/16x16/ReloadFolder16x16.png" />
-                    </MenuItem.Icon>
-                </MenuItem>
+                    </userControls:SearchableMenuItem.Icon>
+                </userControls:SearchableMenuItem>
                 <Separator />
-                <MenuItem Header = "Settings"
+                <userControls:SearchableMenuItem Header = "Settings"
                           Command = "mainWindow:MwCommands.OpenSettingsCommand">
-                    <MenuItem.Icon>
+                    <userControls:SearchableMenuItem.Icon>
                         <Image Source = "../../../Assets/Icons/16x16/Settings16x16.png" />
-                    </MenuItem.Icon>
-                </MenuItem>
-                <MenuItem Header = "Plugin Settings"
+                    </userControls:SearchableMenuItem.Icon>
+                </userControls:SearchableMenuItem>
+                <userControls:SearchableMenuItem Header = "Plugin Settings"
                           Command = "mainWindow:MwCommands.OpenPluginSettingsCommand">
-                    <MenuItem.Icon>
+                    <userControls:SearchableMenuItem.Icon>
                         <Image Source = "../../../Assets/Icons/16x16/PluginSettings16x16.png" />
-                    </MenuItem.Icon>
-                </MenuItem>
+                    </userControls:SearchableMenuItem.Icon>
+                </userControls:SearchableMenuItem>
                 <Separator />
-                <MenuItem Header = "Exit"
+                <userControls:SearchableMenuItem Header = "Console"
+                          Command = "mainWindow:MwCommands.OpenConsoleCommand">
+                </userControls:SearchableMenuItem>
+                <Separator />
+                <userControls:SearchableMenuItem Header = "Exit"
                           Command = "mainWindow:MwCommands.ExitArcanumCommand">
-                </MenuItem>
-            </MenuItem>
+                </userControls:SearchableMenuItem>
+            </userControls:SearchableMenuItem>
 
-            <MenuItem Header = "Edit">
-                <MenuItem Header = "Undo: 'description'">
-                    <MenuItem.Icon>
+            <userControls:SearchableMenuItem Header = "Edit">
+                <userControls:SearchableMenuItem Header = "Undo: 'description'">
+                    <userControls:SearchableMenuItem.Icon>
                         <Image Source = "../../../Assets/Icons/16x16/Undo16x16.png" />
-                    </MenuItem.Icon>
-                </MenuItem>
-                <MenuItem Header = "Step Undo: 'description'">
-                    <MenuItem.Icon>
+                    </userControls:SearchableMenuItem.Icon>
+                </userControls:SearchableMenuItem>
+                <userControls:SearchableMenuItem Header = "Step Undo: 'description'">
+                    <userControls:SearchableMenuItem.Icon>
                         <Image Source = "../../../Assets/Icons/16x16/Undo16x16.png" />
-                    </MenuItem.Icon>
-                </MenuItem>
-                <MenuItem Header = "Redo: 'description'">
-                    <MenuItem.Icon>
+                    </userControls:SearchableMenuItem.Icon>
+                </userControls:SearchableMenuItem>
+                <userControls:SearchableMenuItem Header = "Redo: 'description'">
+                    <userControls:SearchableMenuItem.Icon>
                         <Image Source = "../../../Assets/Icons/16x16/Redo16x16.png" />
-                    </MenuItem.Icon>
-                </MenuItem>
-                <MenuItem Header = "Step Redo: 'description'">
-                    <MenuItem.Icon>
+                    </userControls:SearchableMenuItem.Icon>
+                </userControls:SearchableMenuItem>
+                <userControls:SearchableMenuItem Header = "Step Redo: 'description'">
+                    <userControls:SearchableMenuItem.Icon>
                         <Image Source = "../../../Assets/Icons/16x16/Redo16x16.png" />
-                    </MenuItem.Icon>
-                </MenuItem>
+                    </userControls:SearchableMenuItem.Icon>
+                </userControls:SearchableMenuItem>
 
                 <Separator />
 
-                <MenuItem Header = "Queastor (Find)">
-                    <MenuItem.Icon>
+                <userControls:SearchableMenuItem Header = "Queastor (Find)">
+                    <userControls:SearchableMenuItem.Icon>
                         <Image Source = "../../../Assets/Icons/16x16/Magnifer16x16.png" />
-                    </MenuItem.Icon>
-                </MenuItem>
+                    </userControls:SearchableMenuItem.Icon>
+                </userControls:SearchableMenuItem>
 
                 <Separator />
 
-                <MenuItem Header = "Copy" />
-                <MenuItem Header = "Cut" />
-                <MenuItem Header = "Paste" />
+                <userControls:SearchableMenuItem Header = "Copy" />
+                <userControls:SearchableMenuItem Header = "Cut" />
+                <userControls:SearchableMenuItem Header = "Paste" />
 
-            </MenuItem>
+            </userControls:SearchableMenuItem>
 
-            <MenuItem Header = "Mod Diagnostics">
+            <userControls:SearchableMenuItem Header = "Mod Diagnostics">
 
-                <MenuItem Header = "Open Loading Log" />
-            </MenuItem>
+                <userControls:SearchableMenuItem Header = "Open Loading Log" />
+            </userControls:SearchableMenuItem>
         </Menu>
     </styleClasses:BaseWindow.HeaderContent>
 
