--- a/Arcanum.UI/Components/Windows/MinorWindows/ConsoleWindow.xaml
+++ b/Arcanum.UI/Components/Windows/MinorWindows/ConsoleWindow.xaml
@@ -19,6 +19,7 @@
         <styleClasses:CorneredTextBox Grid.Row = "0"
                  x:Name = "ConsoleOutputTextBox"
                  HorizontalScrollBarVisibility = "Disabled"
+                 VerticalContentAlignment="Top"
                  AcceptsReturn = "False"
                  IsReadOnly = "True"
                  BorderThickness = "0"
@@ -41,8 +42,7 @@
                                       Style = "{StaticResource BaseTextBoxStyle}"
                                       Margin = "0, 0, 0, 4"
                                       HighlightOnFocus="False"
-                                      VerticalContentAlignment="Center"
-                                      KeyDown="ConsoleInputTextBox_KeyDown"
+                                      PreviewKeyDown="ConsoleInputTextBox_KeyDown"
                                       TextChanged="ConsoleInputTextBox_TextChanged"
                                       FontFamily="{StaticResource DefaultMonospacedFont}">
                                       <!-- CornerRadius = "5" -->
