Enhance enum handling and update UI components
- Improved `EnumConverter` to handle FlagsAttribute enums and filter invalid enum values.
- Added `Foreground` and `CaretBrush` styling for `TextBox` in `PropertyGrid`.
- Introduced test object definition in `PropertyGrid.xaml.cs` for integration testing.
- Refined `BorderlessComboBox.xaml` formatting and alignment property definition.
- Removed redundant `DisplayMemberPath` in `BoolTemplate` ComboBox.

--- a/Arcanum.UI/Components/Styles/Specific/BorderlessComboBox.xaml
+++ b/Arcanum.UI/Components/Styles/Specific/BorderlessComboBox.xaml
@@ -101,8 +101,7 @@
         <Setter Property = "ItemContainerStyle"
                 Value = "{StaticResource BaseComboBoxItemStyle}" />
         <Setter Property = "HorizontalAlignment"
-                Value = "Stretch">
-        </Setter>
+                Value = "Stretch" />
         <Setter Property = "SnapsToDevicePixels"
                 Value = "True" />
         <Setter Property = "OverridesDefaultStyle"
