Finished Settings Window implementation which is now capable of generating it's own submenus if the [IsSubMenu] attirbute is place above a property of an object.
Any value can be reset as long as it has [DefaultValue] attribute with a matching type

--- a/Arcanum.UI/Components/UserControls/BaseControls/PropertyGrid.xaml
+++ b/Arcanum.UI/Components/UserControls/BaseControls/PropertyGrid.xaml
@@ -35,7 +35,7 @@
             <ComboBox ItemsSource = "{Binding Type, Converter={StaticResource EnumValuesConverter}}"
                       SelectedItem = "{Binding Value, Mode=TwoWay}"
                       Style = "{StaticResource BorderlessComboboxStyle}"
-                      Margin = "1"
+                      Margin = "1, 1, 4, 1"
                       Background = "Transparent" />
         </DataTemplate>
 
