--- a/Arcanum.UI/Components/Styles/Base/BaseTabControl.xaml
+++ b/Arcanum.UI/Components/Styles/Base/BaseTabControl.xaml
@@ -1,8 +1,7 @@
 ﻿<ResourceDictionary xmlns = "http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x = "http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <Style x:Key = "DarkTabItemStyle"
-           TargetType = "{x:Type TabItem}">
+    <Style TargetType = "{x:Type TabItem}">
         <Setter Property = "Background"
                 Value = "{StaticResource DefaultBackColorBrush}" />
         <Setter Property = "Foreground"
@@ -60,16 +59,13 @@
         </Setter>
     </Style>
 
-    <Style x:Key = "DarkTabStyle"
-           TargetType = "{x:Type TabControl}">
+    <Style TargetType = "{x:Type TabControl}">
         <Setter Property = "Background"
                 Value = "{StaticResource DefaultBackColorBrush}" />
         <Setter Property = "BorderBrush"
                 Value = "{StaticResource DefaultBorderColorBrush}" />
         <Setter Property = "BorderThickness"
                 Value = "2" />
-        <Setter Property = "ItemContainerStyle"
-                Value = "{StaticResource DarkTabItemStyle}" />
     </Style>
 
 </ResourceDictionary>
