--- a/Arcanum.UI/Components/Styles/Base/BaseComboboxStyle.xaml
+++ b/Arcanum.UI/Components/Styles/Base/BaseComboboxStyle.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns = "http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x = "http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x = "http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:styleClasses = "clr-namespace:Arcanum.UI.Components.StyleClasses">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source = "/Components/Styles/Base/BaseScrollbar.xaml"> </ResourceDictionary>
@@ -18,14 +19,14 @@
                     BorderBrush = "{TemplateBinding BorderBrush}"
                     CornerRadius = "2"
                     BorderThickness = "{TemplateBinding BorderThickness}"
-                    Background = "Transparent" />
+                    Background = "{TemplateBinding Background}" />
             <Border Grid.Column = "1"
                     Margin = "1, 1, 1, 1"
                     BorderBrush = "{TemplateBinding BorderBrush}"
                     Name = "ButtonBorder"
                     CornerRadius = "2"
                     BorderThickness = "0"
-                    Background = "Transparent" />
+                    Background = "{TemplateBinding Background}" />
 
             <Path Name = "Arrow"
                   Grid.Column = "1"
@@ -89,8 +90,7 @@
         </ControlTemplate.Triggers>
     </ControlTemplate>
 
-    <Style x:Key = "BaseComboboxStyle"
-           TargetType = "{x:Type ComboBox}">
+    <Style TargetType = "{x:Type ComboBox}">
 
         <Setter Property = "FontSize"
                 Value = "{StaticResource DefaultFontSize}" />
@@ -126,7 +126,7 @@
                                       Focusable = "False"
                                       IsChecked = "{Binding Path=IsDropDownOpen, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}"
                                       Template = "{StaticResource ComboBoxToggleButtonTemplate}"
-                                      Background = "Transparent" />
+                                      Background = "{TemplateBinding Background}" />
 
                         <ContentPresenter Name = "ContentSite"
                                           Margin = "5, 1, 23, 3"
@@ -137,27 +137,27 @@
                                           ContentTemplate = "{TemplateBinding ComboBox.SelectionBoxItemTemplate}"
                                           ContentTemplateSelector = "{TemplateBinding ItemTemplateSelector}">
                         </ContentPresenter>
-                        <TextBox Name = "PART_EditableTextBox"
+                        <styleClasses:CorneredTextBox Name = "PART_EditableTextBox"
                                  Margin = "3, 3, 2, 3"
                                  IsReadOnly = "{TemplateBinding IsReadOnly}"
                                  Visibility = "Hidden"
-                                 Background = "Transparent"
+                                 Background = "{TemplateBinding Background}"
                                  HorizontalAlignment = "Left"
                                  VerticalAlignment = "Center"
                                  Focusable = "True"
                                  Foreground = "{TemplateBinding Foreground}"
                                  CaretBrush = "{TemplateBinding Foreground}">
 
-                            <TextBox.Template>
-                                <ControlTemplate TargetType = "TextBox">
+                            <styleClasses:CorneredTextBox.Template>
+                                <ControlTemplate TargetType = "styleClasses:CorneredTextBox">
                                     <Border Background = "Transparent">
                                         <ScrollViewer x:Name = "PART_ContentHost"
                                                       Background = "Transparent"
                                                       Focusable = "False" />
                                     </Border>
                                 </ControlTemplate>
-                            </TextBox.Template>
-                        </TextBox>
+                            </styleClasses:CorneredTextBox.Template>
+                        </styleClasses:CorneredTextBox>
                         <!-- Popup showing items -->
                         <Popup Name = "Popup"
                                Placement = "Bottom"
