--- a/Arcanum.UI/Components/Windows/MinorWindows/ModifierBrowser.xaml
+++ b/Arcanum.UI/Components/Windows/MinorWindows/ModifierBrowser.xaml
@@ -1,15 +1,14 @@
-﻿<styleClasses:BaseWindow x:Class = "Arcanum.UI.Components.Windows.MinorWindows.DocsObjBrowser"
+﻿<styleClasses:BaseWindow x:Class = "Arcanum.UI.Components.Windows.MinorWindows.ModifierBrowser"
                          xmlns = "http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                          xmlns:x = "http://schemas.microsoft.com/winfx/2006/xaml"
                          xmlns:mc = "http://schemas.openxmlformats.org/markup-compatibility/2006"
                          xmlns:d = "http://schemas.microsoft.com/expression/blend/2008"
                          xmlns:styleClasses = "clr-namespace:Arcanum.UI.Components.StyleClasses"
                          mc:Ignorable = "d"
-                         Title = "DocsObjBrowser"
+                         Title = "ModifierBrowser"
                          Height = "450"
                          Width = "1200"
                          Background = "{StaticResource DefaultBackColorBrush}">
-
 
     <Grid>
         <Grid.RowDefinitions>
@@ -52,7 +51,6 @@
                   ItemsSource = "{Binding }"
                   AutoGenerateColumns = "False"
                   SelectionMode = "Single"
-                  SelectionChanged = "DataGrid_SelectionChanged"
                   Background = "{StaticResource InlineBackColorBrush}"
                   RowHeaderWidth = "0"
                   IsReadOnly = "True">
@@ -61,21 +59,32 @@
             <DataGrid.Columns>
                 <DataGridTextColumn Header = "Name"
                                     Binding = "{Binding Name}" />
-                <DataGridTextColumn Header = "Usage"
-                                    Binding = "{Binding Usage}" />
-                <DataGridTextColumn Header = "ReadsGameState"
-                                    Binding = "{Binding ReadsGameStateForAllScopes}" />
-                <DataGridTextColumn Header = "Traits"
-                                    Binding = "{Binding TraitsString}" />
-                <DataGridTextColumn Header = "Scopes"
-                                    Binding = "{Binding ScopesString}" />
-                <DataGridTextColumn Header = "Targets"
-                                    Binding = "{Binding TargetsString}" />
-                <DataGridTextColumn Header = "Description"
-                                    Binding = "{Binding Description}" />
+                <DataGridTextColumn Header = "IsGood"
+                                    Binding = "{Binding IsGood}" />
+                <DataGridTextColumn Header = "NumDecimals"
+                                    Binding = "{Binding NumDecimals}" />
+                <DataGridTextColumn Header = "Category"
+                                    Binding = "{Binding Category}" />
+                <DataGridTextColumn Header = "IsBoolean"
+                                    Binding = "{Binding IsBoolean}" />
+                <DataGridTextColumn Header = "IsPercentage"
+                                    Binding = "{Binding IsPercentage}" />
+                <DataGridTextColumn Header = "IsAlreadyPercent"
+                                    Binding = "{Binding IsAlreadyPercent}" />
+                <DataGridTextColumn Header = "Min"
+                                    Binding = "{Binding Min}" />
+                <DataGridTextColumn Header = "ScaleWithPop"
+                                    Binding = "{Binding ScaleWithPop}" />
+                <DataGridTextColumn Header = "Format"
+                                    Binding = "{Binding Format}" />
+                <DataGridTextColumn Header = "Bias"
+                                    Binding = "{Binding Bias}" />
+                <DataGridTextColumn Header = "ShouldShowInModifierTab"
+                                    Binding = "{Binding ShouldShowInModifierTab}" />
+                <DataGridTextColumn Header = "Ai"
+                                    Binding = "{Binding Ai}" />
             </DataGrid.Columns>
         </DataGrid>
-
-
     </Grid>
+
 </styleClasses:BaseWindow>
