Add Mod Metadata handling and property browsing via UI
- Introduced `ModMetadata` class for parsing and managing mod metadata.
- Implemented `ExistingModsLoader` to read and parse mod metadata files.
- Added `WindowLinker` service for opening property browser windows.
- Integrated Mod Metadata browsing functionality in `MainWindow`.
- Registered console command `browse` for accessing metadata and other app data via the property grid.

--- a/Arcanum.UI/Components/Windows/MainWindows/MainWindow.xaml
+++ b/Arcanum.UI/Components/Windows/MainWindows/MainWindow.xaml
@@ -202,6 +202,8 @@
 
                 <userControls:SearchableMenuItem Header = "Run Location Parsing" 
                                                  Command="mainWindow:MwCommands.DebugParsingCommand"/>
+                <userControls:SearchableMenuItem Header = "Browse Mod Metadata" 
+                                                 Click="MenuItem_OnClick"/>
             </userControls:SearchableMenuItem>
         </Menu>
     </styleClasses:BaseWindow.HeaderContent>
