--- a/Arcanum.UI/Components/Styles/Specific/SearchResultListView.xaml
+++ b/Arcanum.UI/Components/Styles/Specific/SearchResultListView.xaml
@@ -1,44 +1,41 @@
 ﻿<ResourceDictionary xmlns = "http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x = "http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:styleClasses = "clr-namespace:Arcanum.UI.Components.StyleClasses">
+                    xmlns:search = "clr-namespace:Arcanum.API.UtilServices.Search;assembly=Arcanum.API">
 
-    <DataTemplate x:Key = "SearchResultDataTemplate"
-                  DataType = "{x:Type styleClasses:SearchResultItem}">
-
+    <DataTemplate DataType = "{x:Type search:ISearchable}"
+                  x:Key = "SearchResultDataTemplate">
         <Grid Margin = "5,0">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width = "Auto" />
+                <ColumnDefinition Width = "21" />
                 <ColumnDefinition Width = "*" />
             </Grid.ColumnDefinitions>
 
             <Image Grid.Column = "0"
-                   Source = "{Binding IconPath}"
+                   Source = "{Binding VisualRepresentation.IconPath}"
                    Width = "16"
                    Height = "16"
                    VerticalAlignment = "Center"
                    Margin = "0,0,5,0"
-                   RenderOptions.BitmapScalingMode = "Fant"/>
+                   RenderOptions.BitmapScalingMode = "Fant" />
 
             <TextBlock Grid.Column = "1"
                        VerticalAlignment = "Center"
                        TextTrimming = "CharacterEllipsis">
-
                 <TextBlock.Inlines>
-                    <Run Text = "{Binding MainText}"
+                    <Run Text = "{Binding VisualRepresentation.MainText}"
                          Foreground = "{StaticResource GreenForeColorBrush}"
                          FontSize = "12" />
-                    <Run Text = "{Binding Description, StringFormat=' {0}'}"
+                    <Run Text = "{Binding VisualRepresentation.Description, StringFormat=' {0}'}"
                          Foreground = "{StaticResource GreyedOutForeColorBrush}"
                          FontSize = "11" />
-
                 </TextBlock.Inlines>
             </TextBlock>
         </Grid>
     </DataTemplate>
 
+
     <Style x:Key = "SearchResultListBoxStyle"
-           TargetType = "ListBox"
-           >
+           TargetType = "ListBox">
         <Setter Property = "Background"
                 Value = "Transparent" />
         <Setter Property = "BorderThickness"
@@ -85,7 +82,7 @@
                                     Property = "Background"
                                     Value = "{StaticResource BlueSelectionBackColorBrush}" />
                             <Setter Property = "Foreground"
-                                    Value = "White" />
+                                    Value = "{StaticResource DefaultForeColorBrush}" />
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
