--- a/Arcanum.UI/Components/UserControls/SearchTextBox.xaml
+++ b/Arcanum.UI/Components/UserControls/SearchTextBox.xaml
@@ -50,7 +50,8 @@
                      Margin = "4,0"
                      MinWidth = "100"
                      Foreground = "{StaticResource DefaultForeColorBrush}"
-                     CaretBrush = "{StaticResource DefaultForeColorBrush}" />
+                     CaretBrush = "{StaticResource DefaultForeColorBrush}" 
+                     TextChanged="SearchInputTextBox_OnTextChanged"/>
         </DockPanel>
     </Border>
 
